--- a/static/css/control.css
+++ b/static/css/control.css
@@ -70,14 +70,14 @@ box-shadow: 0px 0px 5px 1px rgb(0, 255, 242);
   text-align: center;
 }
 span {
-  font-size: xxx-large;
+  font-size: xx-large;
 }
 .vertical-line1{
   position: absolute;
   display: inline-block;
   border-left: 1px solid #ccc;
   margin: 0 10px;
-  height: 125px;
+  height: 100px;
   margin-left: 33%;
   }
 .vertical-line2{
@@ -85,7 +85,7 @@ span {
   display: inline-block;
   border-left: 1px solid #ccc;
   margin: 0 10px;
-  height: 125px;
+  height: 100px;
   padding-left: 20px;
   margin-left: 66.99%;
   }
