--- a/static/css/settime.css
+++ b/static/css/settime.css
@@ -1,93 +1,93 @@
 .head {
-    color: white;
-    padding: 1em 2em;
+  color: white;
+  padding: 1em 2em;
 }
 
 .head-icon {
-    position: relative;
-    display: inline-block;
-    bottom: 8px;
-    display: inline-block;
-    background-color: #2e2f33;
-    border: 2px solid;
-    border-color: #2e2f33;
-    border-radius: 50%;
+  position: relative;
+  display: inline-block;
+  bottom: 8px;
+  display: inline-block;
+  background-color: #2e2f33;
+  border: 2px solid;
+  border-color: #2e2f33;
+  border-radius: 50%;
 }
 .head-text {
-    position: relative;
-    display: inline-block;
+  position: relative;
+  display: inline-block;
 }
 .center{
-    text-align: center;
+  text-align: center;
 }
 
 .cardsetup-box {
-    background-color: #2e2f33;
-    border: 2px solid;
-    border-color: rgb(235, 254, 255);
-    box-shadow: 0px 0px 5px 1px rgb(0, 255, 242);
-    padding: 1em;
-    border-radius: 30px;
+  background-color: #2e2f33;
+  border: 2px solid;
+  border-color: rgb(235, 254, 255);
+  box-shadow: 0px 0px 5px 1px rgb(0, 255, 242);
+  padding: 1em;
+  border-radius: 30px;
 }
 .btn-del{
-    background-color: #2e2f33;
-    border: 2px solid;
-    border-color: #2e2f33;
-    border-radius: 50%;
+  background-color: #2e2f33;
+  border: 2px solid;
+  border-color: #2e2f33;
+  border-radius: 50%;
 }
 
 .custom-select{
-    position: relative;
-    display: inline;
-
+  position: relative;
+  display: inline;
 }
 .custom-select select {
-    width:80px;
-    display: inline;
-    background-color: #3b4048ff;
-    border-radius: 10px;
-    border: 2px solid;
-    border-color: #595959
+  width:80px;
+  display: inline;
+  color: #ffffff;
+  background-color: #3b4048ff;
+  border-radius: 10px;
+  border: 2px solid;
+  border-color: #595959
 }
 .custom-input {
-    width:80px;
-    display: inline;
-    background-color: #3b4048ff;
-    border-radius: 10px;
-    border: 2px solid;
-    border-color: #595959
+  width:80px;
+  color: #ffffff;
+  background-color: #3b4048ff;
+  border-radius: 10px;
+  border: 2px solid;
+  border-color: #595959
 }
 
 /*Form*/
 .form-inline {
-    flex-flow: row wrap;
-    align-items: center;
-  }
-.form-inline label {
-    margin: 5px 10px 5px 0;
-  }
-.custom-select{
-    position: relative;
-    display: inline;
+  flex-flow: row wrap;
+  align-items: center;
 }
+.form-inline label {
+  margin: 5px 5px 10px;
+}
+.oneline {
+  white-space: nowrap;
+}
+
 .flex-left{
-    display: flex;
-    justify-content: left;
+  display: flex;
+  justify-content: left;
 }
 .flex-right{
-    display: flex;
-    justify-content: right;
+  display: flex;
+  justify-content: right;
 }
 
 .day {
-  /*display: block;*/
-  position: relative;
-  width: 50px;
-  height: 50px;
-  padding: 1em;
-  margin: .5px;
-  /*background-color: #ddd;*/
-  user-select: none;
+/*display: block;*/
+position: relative;
+width: 50px;
+height: 50px;
+padding: 1em;
+margin: .5px;
+/*background-color: #ddd;*/
+user-select: none;
 }
 
 .dayselect {
@@ -122,12 +122,16 @@
   left: 0;
   height: 100%;
   width: 100%;
-  background-color: #3b3c42;
+  background-color: #2e2f33;
   border: 1px solid;
   border-color: #595959;
   border-radius: 50%;
   text-align: center;
   font-size: 15px;
+}
+
+.day-checked{
+  box-shadow: 0px 0px 5px 1px rgb(0, 255, 242);
 }
 
 /* On mouse-over, add a grey background color */
